fixed spacing on quote graphics

--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,8 @@ nav {
 	align-items: center;
 	width: 100vw;
 	height: 90px;
-	background-color: var(--charcoal);
+/*	background-color: var(--charcoal);*/
+	background-color: rgb(35, 35, 35, 0.98);
 	color: var(--link-text);
 	z-index: 100;
 }
@@ -158,7 +159,7 @@ nav {
 
 .video {
   position: absolute;
-  top: -31px;
+	align-self: flex-end;
   min-width: 100vw; 
   min-height: 100%;
 	filter: grayscale();
@@ -232,18 +233,15 @@ nav {
 
 .quote-container {
 	background-color: var(--charcoal);
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	padding: 80px;
+	padding: 80px 0 120px 0;
+	width: 100vw;
+	text-align: center;
 }
 
 .realtor-image {
 	-webkit-clip-path: circle(39%);
 	clip-path: circle(39%);
-	margin-top: -10px;
-	margin-bottom: -40px;
+	margin-bottom: -15px;
 }
 
 .quote {
@@ -253,24 +251,18 @@ nav {
 	font-weight: 400;
 	line-height: 160%;
 	text-align: justify;
+	margin: -30px auto 0 auto;
 	z-index: 5;
+	background-image: url(../img/quote.png);
+	background-repeat: no-repeat;
+	padding-top: 30px;
+	padding-left: 10px;
 }
 
-.realtor-quote {
-	position: absolute;
-	padding-top: 480px;
-	z-index: 1;
+.sam-quote {
+	padding-top: 160px;
+	padding-bottom: 70px;
 }
-
-.quote-container > svg {
-	position: absolute;
-	margin-top: -200px;
-	margin-left: -360px;
-	z-index: 1;
-}
-
-
-
 
 
 /*     TYPES OF INSPECTIONS OFFERED      */
@@ -286,10 +278,6 @@ nav {
 
 .types-inspections > div {
 	margin: 0 40px 80px 40px;
-/*
-	border: 1px dotted #c3c3c3;
-	border-radius: 3px;
-*/
 	padding: 60px;
 		-webkit-box-shadow: 4px 3px 12px rgb(0, 0, 0, .2);
 	box-shadow: 5px 3px 15px rgb(0, 0, 0, .1);
